# backup-qt

./: CMakeLists.txt
example/: file-new.cc
src/: backup.cc  backup.h
